# demo-github-action-speedups

./: .gitignore  README.rst  pyproject.toml  tox.ini
.github/workflows/: test.yaml
requirements/: README.rst
requirements/test/: pyproject.toml  requirements.txt
src/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/: __init__.py
src/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/: d.py
src/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/a/: __init__.py
src/even_odd/: __init__.py
tests/: test_module.py
