[tool.poetry]
name = "a"
version = "0.1.0"
description = ""
authors = ["Kurt McKee <contactme@kurtmckee.org>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = ">=3.8"
flask = "*"
orjson = "*"
psycopg = { extras = ["binary"], version = "*" }
sqlalchemy = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
